# graph-hopper

./: .gitignore  GRAPH_CHECKS_ROADMAP.md  PHASE_1_COMPLETION.md  README.md  agentic-sessions.md  architecture.md  example_usage.py  interactive-scratch.py  pyproject.toml
.github/: copilot-instructions.md
context/: openapi.json
src/graph_hopper/: __init__.py  __init___old.py
src/graph_hopper/api/: __init__.py  client.py
src/graph_hopper/commands/: __init__.py  base.py  check_graph.py  download_recent.py  get_network.py  list_commands.py  merge_graphs.py  status.py
src/graph_hopper/graph_checks/: __init__.py  broadcast_domains.py  device_address_conflicts.py  registry.py  (+14 more)
tests/: test_broadcast_domains.py  test_check_graph.py  test_cli.py  test_device_address_conflicts.py  test_download_recent.py  test_get_network_updated.py  test_invalid_device_ranges.py  test_merge_graphs.py  test_missing_properties.py  test_missing_routers.py  test_missing_vendor_ids.py  test_network_loops.py  test_oversized_networks.py  test_oversized_networks_types.py  test_registry.py  test_routing_inefficiencies.py  test_subnet_mismatches.py  test_unreachable_networks.py  test_url_parsing.py
tests/data/: broadcast_domain_test.ttl  clean_network.ttl  complex_network_loops.ttl  device_address_conflicts.ttl  duplicate_bbmds.ttl  duplicate_device_ids.ttl  duplicate_networks.ttl  invalid_device_ranges.ttl  missing_properties.ttl  missing_vendor_ids.ttl  mstp_oversized_networks.ttl  network_loops.ttl  no_network_loops.ttl  orphaned_devices.ttl  oversized_networks.ttl  routing_scenarios.ttl
(+3 files in other folders)
