[project]
name = "graph-hopper"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Andrew Rodgers", email = "andrew@aceiotsolutions.com" }
]
requires-python = ">=3.12"
dependencies = [
    "click>=8.2.1",
    "httpx>=0.28.1",
    "rdflib>=7.1.1",
    "typing-extensions>=4.8.0",
]

[project.scripts]
graph-hopper = "graph_hopper:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "graph-hopper",
    "pyrefly>=0.24.2",
    "pytest>=8.4.1",
    "ruff>=0.12.3",
]

[tool.uv.sources]
graph-hopper = { workspace = true }
